partial fix for #273

--- a/src/main/resources/properties/help_pt.properties
+++ b/src/main/resources/properties/help_pt.properties
@@ -1,5 +1,5 @@
 associate=<p>Para criar SIPs, o utilizador tem de escolher uma regra de associação.</p>\
-<p>Para isso, tem de selecionar os ficheiros e pastas que contêm os ficheiros a serem incluídos nos SIPs e arrastá-los para um nó  da hierarquia do plano de classificação. Este nó pode ser do tipo "plano de classificação", "SIP" ou o nível de raíz (nó não-especificado).</p>\
+<p>Para isso, tem de selecionar os ficheiros e pastas que contêm os ficheiros a serem incluídos nos SIPs e arrastá-los para um nó  da hierarquia do plano de classificação. Este nó pode ser do tipo "plano de classificação", "SIP" ou o nível de raiz (nó não-especificado).</p>\
 <p>Também pode clicar no botão "Associar" para iniciar o processo.</p>\
 <p>Depois desta operação, ser-lhe-á apresentado um conjunto de opções que irá determinar a forma como os SIPs são criados.</p>
 associationMethod=O método de associação de dados define as regras que são utilizadas para transformar as pastas e ficheiros em SIPs. Existem atualmente 4 métodos disponíveis.
@@ -10,7 +10,7 @@ export=<p>O último passo no processo de criação de SIP é exportar os SIPs ma
 <p>É também nessa altura que o formato de exportação deve ser escolhido. De momento, o RODA-in suporta 2. SIP do projeto E-ARK e BagIt.</p>
 fileExplorer=<p>Um objeto pode ter 3 estados: normal, ignorado ou mapeado.</p>\
 <p><strong>Normal</strong> é o estado normal dos objetos e o único estado a partir do qual SIPs podem ser criados.</p>\
-<p>Objetos no estado <strong>ignorado</strong> não serão utilizados na criação de pacotes. Podem ser ignorados tendo por base regras definidas na configuração da aplicação ou manualmente através do botão "Ignorar". Este objetos são escondidos por omissão, mas podem ser apresentados ativando uma opção do menu.</p>\
+<p>Objetos no estado <strong>ignorado</strong> não serão utilizados na criação de pacotes. Podem ser ignorados tendo por base regras definidas na configuração da aplicação ou manualmente através do botão "Ignorar". Estes objetos são escondidos por omissão, mas podem ser apresentados ativando uma opção do menu.</p>\
 <p>Objetos <strong>mapeados</strong> são aqueles já adicionados a SIPs. O objetivo é implementar uma estratégia "mapear e esquecer" onde os utilizadores arrastam objetos do seu sistema de ficheiros para criar SIPs, desaparecendo depois da interface. Isto permite ao utilizador focar-se apenas nos objetos restantes, melhorando assim a sua produtividade no projeto de criação de SIPs.</p>
 firstStep=O primeiro passo do processo é escolher os ficheiros e pastas do computador a arquivar e adicioná-los ao explorador de ficheiro da aplicação. Esta ação irá apresentar a pasta e o seu conteúdo numa vista de árvore. As pastas e ficheiros são claramente distinguíveis umas das outras (uma vez que são utilizados ícones diferentes) e as pastas podem ser expandidas de modo a inspecionar o seu conteúdo.
 inspectionPanel=Depois de criar SIPs, pode querer enriquecê-los manualmente ou tratar alguns casos excecionais. Este é um passo opcional, mas oferece algumas funcionalidades importantes que não devem ser negligenciadas, tais como criar e validar metadados, manipular o conteúdo do SIP ou adicionar documentação.
@@ -40,20 +40,20 @@ link.schemaPane=Plano de classificação
 link.secondStep=Criar SIPs: segundo passo
 link.templatingSystem=Sistema de modelos de metadados
 metadataMethod=SIPs podem conter dados e metadados. Os metadados são incluídos em cada SIP através de regras de associação. Estas regras de associação definem a forma com os metadados descritivos selecionados do sistema de ficheiro são incluídos dentro de cada SIP. Existem atualmente 4 formas de associação de metadados.
-schemaPane=<p>Para criar um plano de classificação, o primeiro passo é adicionar items de descrição utilizado o botão <strong>Adicionar</strong> situado na parte inferior do painel central. Ao carregar nesse botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado ou na raíz se nenhum item estiver selecionado no painel central ou se o item selecionado for um SIP.</p>\
+schemaPane=<p>Para criar um plano de classificação, o primeiro passo é adicionar itens de descrição utilizado o botão <strong>Adicionar</strong> situado na parte inferior do painel central. Ao carregar nesse botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado ou na raiz se nenhum item estiver selecionado no painel central ou se o item selecionado for um SIP.</p>\
 <p>O processo de remoção começa selecionando os itens a remover e clicando no botão <strong>Remover</strong>, apresentado na zona inferior do painel. Todos os SIPs selecionados são removidos e o seu conteúdo regressa ao estado normal, de modo a poder ser adicionados a outros SIPs. Quando um item de descrição é removido, todos os seus SIPs descendentes são também removidos.</p>\
 <p>Arrastando e largando os itens selecionados por cima de outros itens, o plano de classificação pode ser totalmente <strong>reorganizado</strong>. O comportamento do sistema de Drag'n'drop pode ser descrito da seguinte forma:</p>\
 <ul>\
 <li>Ao largar itens por cima de um item de descrição existente, estes são adicionados como filhos diretos do item existente.</li>\
-<li>Ao largar itens numa secção vazia da árvore, estes são adicionados na raíz desta árvore.</li>\
-<li>Ao largar itens por cima de um SIP, estes são adicionados com filhos do pai deste SIP, isto é, passam a estar ao mesmo nível. Isto acontece pois SIPs não podem ter descendentes no RODA-in.</li>\
-<li>Ao largar um pai por cima de um dos seus descendentes, a ação é cancelada, pois caso contrário, deixaria de existir uma ligação entre a árvore e sub-árvore selecionada (que começa no item que se está a arrastar).</li>\
+<li>Ao largar itens numa secção vazia da árvore, estes são adicionados na raiz desta árvore.</li>\
+<li>Ao largar itens por cima de um SIP, estes são adicionados com filhos do pai deste SIP, isto é, passam a estar ao mesmo nível. Isto acontece porque os SIPs não podem ter descendentes no RODA-in.</li>\
+<li>Ao largar um pai por cima de um dos seus descendentes, a ação é cancelada, pois caso contrário, deixaria de existir uma ligação entre a árvore e subárvore selecionada (que começa no item que se está a arrastar).</li>\
 </ul>\
 <p>Depois do plano de classificação estar completo, pode querer guardá-lo para usar no futuro utilizando a funcionalidade "Exportar" , que se encontra por baixo do <strong>menu Plano de Classificação</strong>.</p>\
 <p>Por último, o rodapé apresenta informação sobre o item selecionado: o número de SIPs, pastas, ficheiros e tamanho.</p>
 secondStep=<p>O plano de classificação pode ser importado a partir de um ficheiro ou criado diretamente na aplicação.</p>\
 <p>Com a primeira opção, o utilizador precisa de importar um ficheiro JSON que foi criado no RODA-in ou no RODA, uma vez que o formato gerado por estas duas aplicações é o único suportado atualmente.</p>\
-<p>Para criar um plano de classificação, o primeiro passo é adicionar itens de descrição através do botão "Adicionar" apresentado na zona inferior do painel central. Ao clicar no botão,um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado no painel central ou na raíz se nenhum item estiver selecionado ou se o item selecionado for um SIP.</p>\
+<p>Para criar um plano de classificação, o primeiro passo é adicionar itens de descrição através do botão "Adicionar" apresentado na zona inferior do painel central. Ao clicar no botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado no painel central ou na raiz se nenhum item estiver selecionado ou se o item selecionado for um SIP.</p>\
 <p>Para além de poder adicionar itens, existem duas outras ações disponíveis: remover e reorganizar.</p>
 templatingSystem=<p>Uma vez que editar os ficheiros de metadados à mão é um processo moroso, adicionámos uma forma de criar formulários baseados nos campos do modelo. Estes ficheiros estão localizados na pasta "roda-in" (em Documentos se estiver a usar Windows ou na raiz do utilizador se usar Linux), debaixo da pasta "templates".</p>\
 <p>Através do poderoso motor de templating Handlebars, qualquer utilizador pode criar modelos com a informação necessária para criar um formulário. Para além de uma etiqueta simples, (por exemplo {{pessoa}}), podemos adicionar opções que vão modificar a forma como cada campo é criado. As opções são simples elementos chave-valor, por exemplo <code>title="Criar SIPs com o RODA-in"</code>, onde a chave é o nome da opção e o valor é o valor que será dado a essa opção. Apenas a primeira etiqueta deve ter opções, ou seja, se existirem duas etiquetas com o mesmo nome, as opções da segunda serão ignoradas. As opções são facultativas, o formulário é criado apenas com a etiqueta, que cria um campo de texto simples.</p>\
@@ -68,7 +68,7 @@ templatingSystem=<p>Uma vez que editar os ficheiros de metadados à mão é um p
 <ul>\
 <li>text - campo de texto</li>\
 <li>text-area - Área de texto. Maior do que um campo de texto</li>\
-<li>date - campo de texto com um seleccionador de data</li>\
+<li>date - campo de texto com um selecionador de data</li>\
 <li>\
 list - lista com os valores possíveis do campo (combo box)\
 <ul>\
