fixes #280 by changing the 'METS Header' translation

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -36,6 +36,9 @@ CreationModalProcessing.finished=Kész
 CreationModalProcessing.impossibleEstimate=Nem becsülhető a várható befejezés.
 CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
+
+CreationModalMETSHeader.METSHeader=A csomag leírása
+
 RenameModalProcessing.renameRepresentation=átnevezése képviselet
 RenameModalProcessing.renameAlreadyExists=Ez az ábrázolás név már használatban van
 FileExplorerPane.chooseDir=Mappaválasztás
