--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -319,7 +319,7 @@ i18n.metsheader.EARK.field.agents.attr.type.description = É usado para especifi
 
 i18n.metsheader.EARK.field.agents.attr.othertype.label = Outra função
 i18n.metsheader.EARK.field.agents.attr.othertype.description = Especifica uma função específica, apenas usado quando a função é 'OTHER'.
-CreationModalMETSHeader.METSHeader=Cabeçalho do METS
+CreationModalMETSHeader.METSHeader=Descritivo do pacote
 IPContentType.RDBMS=Sistema de Gestão de Bases de Dados Relacionais
 CreationModalPreparation.serial=Número de série
 CreationModalPreparation.transferring=Transferência
