fixed #282 by ignoring empty fields; also added some I18N METS Header error strings

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -283,6 +283,15 @@ SchemaPane.tooManySelected.header=Too many items selected
 SchemaPane.tooManySelected.content=Multiple edition not available
 SchemaPane.tooManySelected.title=Too many items selected
 
+CreationModalMETSHeader.error.mandatory = This field is mandatory.
+CreationModalMETSHeader.error.minimum.before = At least
+CreationModalMETSHeader.error.minimum.after = fields must be filled out.
+CreationModalMETSHeader.error.maximum.before = Exceeded the maximum of
+CreationModalMETSHeader.error.maximum.after = fields of this type.
+CreationModalMETSHeader.warning.maximum = Maximum reached!
+CreationModalMETSHeader.error.oneOf.before = is not a valid
+CreationModalMETSHeader.error.oneOf.after = It must be one of
+CreationModalMETSHeader.error.blank = <blank>
 CreationModalMETSHeader.section.status = Status
 CreationModalMETSHeader.section.altrecords = AltRecordIDs
 CreationModalMETSHeader.section.agents = Agents
