fixes #288, and adds a simple way to interpolate text into localized strings

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -284,14 +284,14 @@ SchemaPane.tooManySelected.content=Multiple edition not available
 SchemaPane.tooManySelected.title=Too many items selected
 
 CreationModalMETSHeader.error.mandatory = This field is mandatory.
-CreationModalMETSHeader.error.minimum.before = At least
-CreationModalMETSHeader.error.minimum.after = fields must be filled out.
-CreationModalMETSHeader.error.maximum.before = Exceeded the maximum of
-CreationModalMETSHeader.error.maximum.after = fields of this type.
+CreationModalMETSHeader.error.minimum = At least {} fields must be filled out.
+CreationModalMETSHeader.error.maximum = Exceeded the maximum of {} fields of this type.
+CreationModalMETSHeader.error.oneOf = {} is not a valid {}. It must be one of {}.
+CreationModalMETSHeader.error.mandatoryCanNotBeBlank = {} is a mandatory field and can not be blank.
+CreationModalMETSHeader.error.mandatoryWhen = {} is a mandatory field when {} is {} and can not be blank.
 CreationModalMETSHeader.warning.maximum = Maximum reached!
-CreationModalMETSHeader.error.oneOf.before = is not a valid
-CreationModalMETSHeader.error.oneOf.after = It must be one of
-CreationModalMETSHeader.error.blank = <blank>
+CreationModalMETSHeader.helper.blank = <blank>
+
 CreationModalMETSHeader.section.status = Status
 CreationModalMETSHeader.section.altrecords = AltRecordIDs
 CreationModalMETSHeader.section.agents = Agents
