--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -278,6 +278,15 @@ SchemaPane.tooManySelected.title=Demasiados itens seleccionados
 
 
 
+CreationModalMETSHeader.error.mandatory = Este campo é obrigatório.
+CreationModalMETSHeader.error.minimum = Pelo menos {} items deverão ser preenchidos.
+CreationModalMETSHeader.error.maximum = Excedido o máximo de {} items deste tipo.
+CreationModalMETSHeader.error.oneOf = {} não é um {} válido. Tem de ser um dos seguintes valores: {}.
+CreationModalMETSHeader.error.mandatoryCanNotBeBlank = {} é um campo obrigatório e não pode ser deixado em branco.
+CreationModalMETSHeader.error.mandatoryWhen = {} é um campo obrigatório quando {} tem o valor de {} e não pode ser deixado em branco.
+CreationModalMETSHeader.warning.maximum = Atingido o máximo!
+CreationModalMETSHeader.helper.blank = <vazio>
+
 CreationModalMETSHeader.section.status = Estado
 CreationModalMETSHeader.section.altrecords = IDs de registo alternativos
 CreationModalMETSHeader.section.agents = Agentes
