updated language files (from transifex); added transifex config for .properties files

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -146,6 +146,7 @@ metadataValue.creator=Készítő
 FileExplorerPane.removeFolder=Mappa eltávolítása
 data=Elsődleges adatok
 InspectionPane.addRepresentation=Reprezentáció hozzáadása
+InspectionPane.removeRepresentation=Reprezentáció eltávolítása
 documentation=Dokumentáció
 InspectionPane.docsHelp.title=Dokumentáció mappáinak\nés fájljainak elhelyezése
 InspectionPane.onDropDocs=Dokumentáció hozzáadása
@@ -226,8 +227,6 @@ errorValidatingMetadata = A fájl nem érvényes szerint a séma.
 
 ExportBox.title=4. Submission csomagok
 
-
-InspectionPane.removeRepresentation = Távolítsuk képviselet
 IPContentType.RDB = A relációs adatbázis-kezelő rendszer
 IPContentType.GEODATA = Földrajzi adatok
 IPContentType.SFSB = Egyszerű fájlrendszer alapú
