fixes #287 by updating the main resource files and then fetching the translations from transifex

--- a/src/main/resources/properties/lang_de.properties
+++ b/src/main/resources/properties/lang_de.properties
@@ -17,7 +17,9 @@ ignore=Ignorieren
 load=Öffnen
 remove=Entfernen
 start=Start
+rename=Rename
 root=Root
+clear=Clear
 
 CreationModalPreparation.choose=Wählen...
 CreationModalPreparation.creatingSips=Erstellen von SIPs
@@ -36,6 +38,11 @@ CreationModalProcessing.finished=Erledigt
 CreationModalProcessing.impossibleEstimate=Unmöglich Zeit zu schätzen
 CreationModalProcessing.remaining=Verbleibende Zeit
 CreationModalProcessing.subtitle=%d erstellt von %d (%d%%)
+
+CreationModalMETSHeader.METSHeader=Package description
+
+RenameModalProcessing.renameRepresentation=Rename representation
+RenameModalProcessing.renameAlreadyExists=This representation name is already being used
 
 FileExplorerPane.chooseDir=Ordner wählen
 FileExplorerPane.help.title=Wählen Sie die Ordner\ndie Ihre Dateien enthalten
@@ -202,21 +209,35 @@ items=Dokumente
 folders=Ordner
 Footer.memory=Speichernutzung\: %s von %s
 type=Typ
+version=Version
 metadata.repository=Repository
 metadata.embargoTime=Embargo Zeit
+
 IPContentType.ERMS=Electronic Resource Management System
-IPContentType.RDBMS=Relational Database Management System
-IPContentType.SMURF=Semantically Marked Up Record Format
-InspectionPane.IPType=Pakettyp
+IPContentType.RDB=Relational Database Management System
+IPContentType.GEODATA=Geographical Data
+IPContentType.SFSB=Simple File System Based
 IPContentType.MIXED=Gemischt
 IPContentType.OTHER=Andere
+
+RepresentationType.MOREQ=MOREQ
+RepresentationType.SIARD=SIARD
+RepresentationType.SIARD2=SIARD2
+RepresentationType.SMURF=Semantically Marked Up Record Format
+RepresentationType.OTHER=OTHER
+RepresentationType.MIXED=MIXED
+
+InspectionPane.IPType=Pakettyp
+
 metadata.descDate=Erstellungsdatum der Beschreibung
 InspectionPane.sipTypeTooltip=IP Typ
+InspectionPane.representationTypeTooltip=Representation type
 genericError.title=Oops\! Ein Fehler ist aufgetreten.
 genericError.content=Ein unerwarteter Fehler ist aufgetreten.\nDie Anwendung kann von nun an instabil sein und ein seltsames Verhalten zeigen. \nBitte informieren Sie die Entwickler über dieses Problem.
 CreationModalProcessing.openfolder=Öffne Ordner
 selected=Ausgewählt
 CreationModalPreparation.exportAll=Exportiere alle Dokumente
+CreationModalPreparation.createReport=Create inventory report
 InspectionPane.multipleSelected.help=Die oben hinzugefügten Metadaten-Dateien werden auf alle ausgewählten Dokumente aus dem Klassifizierungsplan hinzugefügt werden. Wenn es Konflikte gibt, wie zum Beispiel wenn eine bestehende Metadaten-Datei den gleichen Namen wie eine neue trägt, wird die vorhandene Datei ersetzt werden. Die einzige Ausnahme ist, wenn die Dateien die gleiche Vorlage sind. In diesem Fall werden die Werte der neuen Vorlage die alten überschreiben. Die einzigen Fälle, in denen der alte Wert behalten wird ist, wenn der Wert eines Feldes auf {{auto-generate}} oder {{mixed}} gesetzt ist.
 apply=Anwenden
 InspectionPane.multipleSelected.confirm=Sind Sie sicher, dass Sie diese Änderungen anwenden möchten?
@@ -225,9 +246,12 @@ InspectionPane.multipleSelected.appliedMessage=Änderungen angewendet\!
 Main.openConfigurationFolder=Öffne Konfigurationsordner
 restart=Neustart
 CreationModalPreparation.prefix=SIP Namen
-name_types.ID=ID
-name_types.TITLE_ID=Titel + ID
-name_types.TITLE_DATE=Titel + Datum
+CreationModalPreparation.transferring=Transferring
+CreationModalPreparation.serial=Serial No.
+sipNameStrategy.ID=ID
+sipNameStrategy.TITLE_ID=Title + ID
+sipNameStrategy.TITLE_DATE=Title + Date
+sipNameStrategy.DATE_TRANSFERRING_SERIALNUMBER=Date + Transferring + Serial
 and=und
 CreationModalPreparation.includeHierarchy=Hierarchie einfügen
 Main.newVersion.content=Die aktuelle Version ist %s\nNeueste Version ist %s\n\nMöchten Sie die neueste Version herunterladen?
@@ -247,3 +271,144 @@ CreationModalProcessing.errorMessagesStopped.content=Aufgrund der großen Anzahl
 help=Hilfe
 menu=Menu
 Main.helpPage=Hilfe Seite
+
+errorValidatingMetadata = The file is not valid according to the schema.
+
+
+ExportBox.title=4. Submission Packages
+
+SchemaPane.tooManySelected.header=Too many items selected
+SchemaPane.tooManySelected.content=Multiple edition not available
+SchemaPane.tooManySelected.title=Too many items selected
+
+CreationModalMETSHeader.error.mandatory = This field is mandatory.
+CreationModalMETSHeader.error.minimum = At least {} fields must be filled out.
+CreationModalMETSHeader.error.maximum = Exceeded the maximum of {} fields of this type.
+CreationModalMETSHeader.error.oneOf = {} is not a valid {}. It must be one of {}.
+CreationModalMETSHeader.error.mandatoryCanNotBeBlank = {} is a mandatory field and can not be blank.
+CreationModalMETSHeader.error.mandatoryWhen = {} is a mandatory field when {} is {} and can not be blank.
+CreationModalMETSHeader.warning.maximum = Maximum reached\!
+CreationModalMETSHeader.helper.blank = <blank>
+
+CreationModalMETSHeader.section.status = Status
+CreationModalMETSHeader.section.altrecords = AltRecordIDs
+CreationModalMETSHeader.section.agents = Agents
+
+i18n.metsheader.EARK.field.status.title = Status
+i18n.metsheader.EARK.field.status.label = Status
+i18n.metsheader.EARK.field.status.description = The status of the METS document. It is used for internal processing purposes.
+
+i18n.metsheader.EARK.field.altrecords.title = Record identifier
+i18n.metsheader.EARK.field.altrecords.label = ID
+i18n.metsheader.EARK.field.altrecords.description = The alternative record identifier allows one to use alternative record identifier values for the digital object represented by the METS document; the primary record identifier is stored in the OBJID attribute in the root <mets> element.
+
+i18n.metsheader.EARK.field.altrecords.attr.type.label = Typ
+i18n.metsheader.EARK.field.altrecords.attr.type.description = A description of the identifier type (e.g., OCLC record number, LCCN, etc.).
+
+i18n.metsheader.EARK.field.agents.title = Agent
+i18n.metsheader.EARK.field.agents.attr.name.label = Name
+i18n.metsheader.EARK.field.agents.attr.name.description = The full name of the document agent.
+
+i18n.metsheader.EARK.field.agents.attr.note.label = Note
+i18n.metsheader.EARK.field.agents.attr.note.description = Records any additional information regarding the agent's activities with respect to the METS document.
+
+i18n.metsheader.EARK.field.agents.attr.role.label = Role
+i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are\: CREATOR (the person(s) or institution(s) responsible for the METS document); EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); PRESERVATION (the person(s) or institution(s) responsible for preservation functions); DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); IPOWNER (Intellectual Property Owner\: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
+
+i18n.metsheader.EARK.field.agents.attr.type.label = Typ
+i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values\: INDIVIDUAL\: Use if an individual has served as the agent. ORGANIZATION\: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. OTHER\: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
+
+i18n.metsheader.EARK.field.agents.attr.othertype.label = Other role
+i18n.metsheader.EARK.field.agents.attr.othertype.description = Denotes a role not contained in the allowed values set, this field is only used if OTHER is used as 'Role'.
+
+i18n.metsheader.HUNGARIAN.type.recordstatus = Status
+i18n.metsheader.HUNGARIAN.type.altrecordid = Transfer and submission
+i18n.metsheader.HUNGARIAN.type.agent = Agents
+
+i18n.metsheader.HUNGARIAN.field.recordStatus.title = Status
+i18n.metsheader.HUNGARIAN.field.recordStatus.label = Status
+i18n.metsheader.HUNGARIAN.field.recordStatus.description = Package status can be "Új csomag" represented as "NEW", "Helyettesítő csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
+
+i18n.metsheader.HUNGARIAN.field.deliveryType.title = Transfer type
+i18n.metsheader.HUNGARIAN.field.deliveryType.label = Transfer type
+i18n.metsheader.HUNGARIAN.field.deliveryType.description = Type of the transfer can be certified ERMS represented as "TANÚSÍTOTT IKTATÁS"; ERMS, represented as "STRUKTURÁLT IKTATÁS"; business system with record level metadata, represented as "STRUKTURÁLT IRATNYILVÁNTARTÁS"; high level metadata, represented as "STRUKTURÁLATLAN".
+
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.title = Transfer specification document
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.label = Transfer specification document
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.description = Title and url of transfer specification document.
+
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.title = Transfer agreement
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.label = Transfer agreement
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.description = Reference to the used submission agreement.
+
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.title = Earlier transfer agreement
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.label = Earlier transfer agreement
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.description = The previous submission agreement(s) the information belongs to in the case the information is recorded.
+
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.title = Submission session
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.label = Submission session
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.description = Submission can be delivered in several session. This data shows the description or identification of the given session.
+
+i18n.metsheader.HUNGARIAN.field.packageNumber.title = Submission number
+i18n.metsheader.HUNGARIAN.field.packageNumber.label = Submission number
+i18n.metsheader.HUNGARIAN.field.packageNumber.description = Submission can be delivered in several packages. This data shows the serial number of the package in the given session.
+
+i18n.metsheader.HUNGARIAN.field.referenceCode.title = Archival material reference code
+i18n.metsheader.HUNGARIAN.field.referenceCode.label = Archival material reference code
+i18n.metsheader.HUNGARIAN.field.referenceCode.description = Reference code in the archival description.
+
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.title = Archival material previous reference code
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.label = Archival material previous reference code
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.description = An earlier used reference code in the archival description. In case where the SIP originates from other institutions maintaining a reference code structure, this element can be used to record these reference codes and therefore support the provenance of the package when a whole archival description is not submitted with the submission.
+
+i18n.metsheader.HUNGARIAN.field.accessRestrict.title = Restrictions
+i18n.metsheader.HUNGARIAN.field.accessRestrict.label = Restrictions
+i18n.metsheader.HUNGARIAN.field.accessRestrict.description = Flag to indicate restricted content in the package.
+
+i18n.metsheader.HUNGARIAN.field.appraisal.title = Deletable
+i18n.metsheader.HUNGARIAN.field.appraisal.label = Deletable
+i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be\: "Selejtezhető", "Nem selejtezhető".
+
+i18n.metsheader.HUNGARIAN.field.agent1.title = Record creator
+i18n.metsheader.HUNGARIAN.field.agent1.attr.name.label = Record creator
+i18n.metsheader.HUNGARIAN.field.agent1.attr.name.description = Name of archival creator. Name of the original creator (organisation) of the data being transferred. Please note that this might be different from the organisation which has been charged with preparing and sending the SIP to the archives.
+i18n.metsheader.HUNGARIAN.field.agent1.attr.note.label = Record creator identification code
+i18n.metsheader.HUNGARIAN.field.agent1.attr.note.description = A unique identification code for the archival creator.
+
+i18n.metsheader.HUNGARIAN.field.agent2.title = Data system
+i18n.metsheader.HUNGARIAN.field.agent2.attr.name.label = Data system name
+i18n.metsheader.HUNGARIAN.field.agent2.attr.name.description = Name of the ERMS or data management system the records or data originates from.
+i18n.metsheader.HUNGARIAN.field.agent2.attr.note.label = Data system version
+i18n.metsheader.HUNGARIAN.field.agent2.attr.note.description = Version of the ERMS or data management system the records or data originates from.
+
+i18n.metsheader.HUNGARIAN.field.agent3.title = Submitting organisation
+i18n.metsheader.HUNGARIAN.field.agent3.attr.name.label = Submitting organisation name
+i18n.metsheader.HUNGARIAN.field.agent3.attr.name.description = Name of the organisation submitting the package to the archive.
+i18n.metsheader.HUNGARIAN.field.agent3.attr.note.label = Submitting organisation identification code
+i18n.metsheader.HUNGARIAN.field.agent3.attr.note.description = A unique identification code for the delivering organisation.
+
+i18n.metsheader.HUNGARIAN.field.agent4.title = Contributor
+i18n.metsheader.HUNGARIAN.field.agent4.attr.name.label = Contributor name
+i18n.metsheader.HUNGARIAN.field.agent4.attr.name.description = Name of the organisation or person involved int the submission process of the package e.g. a contractor.
+i18n.metsheader.HUNGARIAN.field.agent4.attr.note.label = Contributor ID
+i18n.metsheader.HUNGARIAN.field.agent4.attr.note.description = A unique identification of the organisation or person involved int the submission process of the package e.g. a contractor.
+
+i18n.metsheader.HUNGARIAN.field.agent5.title = Package creator software
+i18n.metsheader.HUNGARIAN.field.agent5.attr.name.label = Package creator software
+i18n.metsheader.HUNGARIAN.field.agent5.attr.name.description = The software which has been used to create the package.
+i18n.metsheader.HUNGARIAN.field.agent5.attr.note.label = Package creator software version
+i18n.metsheader.HUNGARIAN.field.agent5.attr.note.description = The software version which has been used to create the package.
+
+i18n.metsheader.HUNGARIAN.field.agent6.title = Contact person
+i18n.metsheader.HUNGARIAN.field.agent6.attr.name.label = Name of contact person
+i18n.metsheader.HUNGARIAN.field.agent6.attr.name.description = It may be useful to record a contact person for the submission at the time of the submission. This information is only valid during a short time period.
+i18n.metsheader.HUNGARIAN.field.agent6.attr.note.label = Contact information
+i18n.metsheader.HUNGARIAN.field.agent6.attr.note.description = Phone number and e-mail for the contact person. This information is only valid during a short time period.
+
+i18n.metsheader.HUNGARIAN.field.agent7.title = Preservation organisation
+i18n.metsheader.HUNGARIAN.field.agent7.attr.name.label = Preservation organisation name
+i18n.metsheader.HUNGARIAN.field.agent7.attr.name.description = Name of the organisation responsible for preservation of a submitted package.
+i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
+i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
+IPContentType.RDBMS=Relational Database Management System
+IPContentType.SMURF=Semantically Marked Up Record Format
