--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -207,7 +207,7 @@ InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
 items=items
 folders=folder(s)
-Footer.memory=Memory usage: %s of %s
+Footer.memory=Memory usage\: %s of %s
 type=Type
 version=Version
 metadata.repository=Repository
@@ -232,7 +232,7 @@ InspectionPane.IPType=Package type
 metadata.descDate=Description creation date
 InspectionPane.sipTypeTooltip=IP type
 InspectionPane.representationTypeTooltip=Representation type
-genericError.title=Oops! An error has occurred.
+genericError.title=Oops\! An error has occurred.
 genericError.content=An unexpected error has occurred.\nThe application may be unstable from now on and have strange behaviours. \nPlease contact the developers about this problem.
 CreationModalProcessing.openfolder=Open folder
 selected=Selected
@@ -242,7 +242,7 @@ InspectionPane.multipleSelected.help=The metadata files added to the list above 
 apply=Apply
 InspectionPane.multipleSelected.confirm=Are you sure you want to apply these changes?
 InspectionPane.multipleSelected.helpTitle=Help
-InspectionPane.multipleSelected.appliedMessage=Changes applied!
+InspectionPane.multipleSelected.appliedMessage=Changes applied\!
 Main.openConfigurationFolder=Open configuration folder
 restart=Restart
 CreationModalPreparation.prefix=SIP names
@@ -264,12 +264,10 @@ Main.showHelp=Show help tooltips
 Main.hideHelp=Hide help tooltips
 templatingSystemHelp.header=Templating system help
 metadata.otherlevel=Other level
-validMetadata=Valid metadata!
-invalidMetadata=Invalid metadata!
+validMetadata=Valid metadata\!
+invalidMetadata=Invalid metadata\!
 CreationModalProcessing.errorMessagesStopped.header=Error messages hidden
-CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent errors will not be displayed.\
-\
-Please check the application's log file to see all the error messages.
+CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent errors will not be displayed.Please check the application's log file to see all the error messages.
 help=Help
 menu=Menu
 Main.helpPage=Help
@@ -289,7 +287,7 @@ CreationModalMETSHeader.error.maximum = Exceeded the maximum of {} fields of thi
 CreationModalMETSHeader.error.oneOf = {} is not a valid {}. It must be one of {}.
 CreationModalMETSHeader.error.mandatoryCanNotBeBlank = {} is a mandatory field and can not be blank.
 CreationModalMETSHeader.error.mandatoryWhen = {} is a mandatory field when {} is {} and can not be blank.
-CreationModalMETSHeader.warning.maximum = Maximum reached!
+CreationModalMETSHeader.warning.maximum = Maximum reached\!
 CreationModalMETSHeader.helper.blank = <blank>
 
 CreationModalMETSHeader.section.status = Status
@@ -315,21 +313,10 @@ i18n.metsheader.EARK.field.agents.attr.note.label = Note
 i18n.metsheader.EARK.field.agents.attr.note.description = Records any additional information regarding the agent's activities with respect to the METS document.
 
 i18n.metsheader.EARK.field.agents.attr.role.label = Role
-i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are: \
-  CREATOR (the person(s) or institution(s) responsible for the METS document); \
-  EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); \
-  ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); \
-  PRESERVATION (the person(s) or institution(s) responsible for preservation functions); \
-  DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); \
-  CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); \
-  IPOWNER (Intellectual Property Owner: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); \
-  OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
+i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are\: CREATOR (the person(s) or institution(s) responsible for the METS document); EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); PRESERVATION (the person(s) or institution(s) responsible for preservation functions); DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); IPOWNER (Intellectual Property Owner\: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
 
 i18n.metsheader.EARK.field.agents.attr.type.label = Type
-i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values: \
-  INDIVIDUAL: Use if an individual has served as the agent. \
-  ORGANIZATION: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. \
-  OTHER: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
+i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values\: INDIVIDUAL\: Use if an individual has served as the agent. ORGANIZATION\: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. OTHER\: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
 
 i18n.metsheader.EARK.field.agents.attr.othertype.label = Other role
 i18n.metsheader.EARK.field.agents.attr.othertype.description = Denotes a role not contained in the allowed values set, this field is only used if OTHER is used as 'Role'.
@@ -380,7 +367,7 @@ i18n.metsheader.HUNGARIAN.field.accessRestrict.description = Flag to indicate re
 
 i18n.metsheader.HUNGARIAN.field.appraisal.title = Deletable
 i18n.metsheader.HUNGARIAN.field.appraisal.label = Deletable
-i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be: "Selejtezhető", "Nem selejtezhető".
+i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be\: "Selejtezhető", "Nem selejtezhető".
 
 i18n.metsheader.HUNGARIAN.field.agent1.title = Record creator
 i18n.metsheader.HUNGARIAN.field.agent1.attr.name.label = Record creator
