Added creation of mandatory agent

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -25,6 +25,8 @@ CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar pacotes de submissão
 CreationModalPreparation.outputDirectory=Pasta de saída
 CreationModalPreparation.sipFormat=Formato do pacote de submissão
+CreationModalPreparation.submitterAgentName = Nome do remetente
+CreationModalPreparation.submitterAgentID = ID do remetente 
 CreationModalProcessing.action=Estado
 CreationModalProcessing.currentSip=Título
 CreationModalProcessing.errors=\ erros
